Update paper link and citation

--- a/Stream-Voice-Anon/index.html
+++ b/Stream-Voice-Anon/index.html
@@ -56,8 +56,8 @@
             </div>
 
             <div class="links-row">
-                <a href="pdf/stream_voice_anon.pdf" class="btn-link" aria-label="Download paper PDF">
-                    <i class="fas fa-file-pdf"></i> Paper (to be updated)
+                <a href="https://arxiv.org/abs/2601.13948" class="btn-link" aria-label="Paper link">
+                    <i class="fas fa-file-link"></i> Paper Link
                 </a>
                 <a href="https://github.com/Plachtaa/StreamVoiceAnon" class="btn-link" aria-label="View source code on GitHub">
                     <i class="fab fa-github"></i> Code
@@ -321,7 +321,14 @@
                 <p class="section-description">If you find this work useful, please cite:</p>
 
                 <div class="citation-box">
-                    <pre><code>@inproceedings{todo
+                    <pre><code>@misc{kuzmin2026streamvoiceanonenhancingutilityrealtime,
+      title={Stream-Voice-Anon: Enhancing Utility of Real-Time Speaker Anonymization via Neural Audio Codec and Language Models}, 
+      author={Nikita Kuzmin and Songting Liu and Kong Aik Lee and Eng Siong Chng},
+      year={2026},
+      eprint={2601.13948},
+      archivePrefix={arXiv},
+      primaryClass={eess.AS},
+      url={https://arxiv.org/abs/2601.13948}, 
 }</code></pre>
                     <button class="copy-btn" onclick="copyCitation()" aria-label="Copy citation to clipboard">
                         <i class="fas fa-copy"></i> Copy
@@ -340,7 +347,7 @@
                         <ul class="resource-list">
                             <li>
                                 <i class="fas fa-file-pdf"></i>
-                                <a href="pdf/stream_voice_anon.pdf">Paper PDF (to be updated)</a>
+                                <a href="https://arxiv.org/abs/2601.13948">Paper Link</a>
                             </li>
                             <li>
                                 <i class="fab fa-github"></i>
