--- a/Stream-Voice-Anon/index.html
+++ b/Stream-Voice-Anon/index.html
@@ -57,7 +57,7 @@
 
             <div class="links-row">
                 <a href="https://arxiv.org/abs/2601.13948" class="btn-link" aria-label="Paper link">
-                    <i class="fas fa-file-link"></i> Paper Link
+                    <i class="fas fa-file-pdf"></i> Paper Link
                 </a>
                 <a href="https://github.com/Plachtaa/StreamVoiceAnon" class="btn-link" aria-label="View source code on GitHub">
                     <i class="fab fa-github"></i> Code
